[gd_scene load_steps=3 format=3 uid="uid://byopcoqeq0hav"]

[ext_resource type="Theme" uid="uid://l1m56un8kvw6" path="res://Res/theme.tres" id="1_hlx00"]
[ext_resource type="Script" path="res://Lib/main.gd" id="1_sdlw1"]

[node name="Menu" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_hlx00")
script = ExtResource("1_sdlw1")
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="Box" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="Box"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Singing Dui to Die"
horizontal_alignment = 1

[node name="Buttonbox" type="VBoxContainer" parent="Box"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="Start" type="Button" parent="Box/Buttonbox"]
layout_mode = 2
text = "Sing bird"

[node name="Tool" type="Button" parent="Box/Buttonbox"]
layout_mode = 2
text = "Listen Gua"

[node name="Esc" type="Button" parent="Box/Buttonbox"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="Box/Buttonbox/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Box/Buttonbox/Tool" to="." method="_on_tool_pressed"]
[connection signal="button_up" from="Box/Buttonbox/Esc" to="." method="_on_esc_button_up"]
